scrollbar theme bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
   --bg-color: #fafafa;
+  --scroll-bg-color: #f5f5f5;
 }
 
 * {
@@ -23,7 +24,7 @@ Scrollbar Styling
 
 #style-1::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
+  background-color: var(--scroll-bg-color);
   border-color: #121212;
 }
 
@@ -34,7 +35,7 @@ Scrollbar Styling
 
 #style-1::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #c1c1c1;
+  background-color: #adb5bd;
   height: 6%;
 }
 
